<resources>
    <string name="app_name">todo</string>
    <string name="title_activity_category">CategoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="task">%s</string>
    <string name="name_category">%s</string>
    <string name="dialog_title">Ajouter une catégorie</string>
    <string name="dialog_text">Catégorie : </string>
    <string name="dialog_btn_cancel">ANNULER</string>
    <string name="dialog_btn_add">AJOUTER</string>
    <string name="confirm_delete_cat">Vous êtes sur le point de supprimer la catégorie : %s</string>
    <string name="delete">SUPPRIMER</string>
    <string name="update">MODIFIER</string>
    <string name="dialog_title_update_category">Modifier le nom de catégory</string>
    <string name="check_all">fait</string>
    <string name="uncheck_all">à faire</string>
    <string name="plural_task">%d tâches</string>
    <string name="singular_task">%d tâche</string>

</resources>